Fix z-index. Change gravity

--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -597,7 +597,6 @@ a {
   top: 50%;
   transform: translate(-50%, -50%);
   width: 320px;
-  z-index: 9999;
   @include tablet {
     height: 1500px;
     width: 2000px;
